--- a/index3.html
+++ b/index3.html
@@ -1,53 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Full Page Scroll Landing</title>
 
     <!-- Bootstrap 5 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
 
-    <style>
-        html, body {
-            height: 100%;
-            margin: 0;
-            scroll-snap-type: y mandatory;   /* Snap vertical */
-            overflow-y: scroll;
-        }
+    <style></style>
 
-        /* Each section */
-        .page-section {
-            height: 100vh;                  /* full screen */
-            scroll-snap-align: start;       /* snap point */
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-        }
-    </style>
-</head>
+    <link rel="stylesheet" href="./assets/css/newstyle.css" />
+  </head>
 
-<body>
+  <body>
+    <section class="page-section section1">
+      <picture>
+        <!-- Mobile image -->
+        <source media="(max-width: 1024px)" srcset="./assets/images/mikimoto/mikimoto-mobile-1.jpg" />
 
-    <!-- Section 1 -->
-    <section class="page-section" style="background-image: url('./assets/images/mikimoto/mikimoto-1.jpg');">
+        <!-- Desktop image -->
+        <img src="./assets/images/mikimoto/mikimoto-1.jpg" class="section-img" alt="" />
+      </picture>
     </section>
+    <section class="page-section section2">
+      <picture>
+        <!-- Mobile image -->
+        <source media="(max-width: 1024px)" srcset="./assets/images/mikimoto/mikimoto-mobile-2.jpg" />
 
-    <!-- Section 2 -->
-    <section class="page-section" style="background-image: url('./assets/images/mikimoto/mikimoto-2.jpg');">
+        <!-- Desktop image -->
+        <img src="./assets/images/mikimoto/mikimoto-2.jpg" class="section-img" alt="" />
+      </picture>
     </section>
+    <section class="page-section section3">
+      <picture>
+        <!-- Mobile image -->
+        <source media="(max-width: 1024px)" srcset="./assets/images/mikimoto/mikimoto-mobile-3.jpg" />
 
-    <!-- Section 3 -->
-    <section class="page-section" style="background-image: url('./assets/images/mikimoto/mikimoto-3.jpg');">
+        <!-- Desktop image -->
+        <img src="./assets/images/mikimoto/mikimoto-3.jpg" class="section-img" alt="" />
+      </picture>
     </section>
+    <section class="page-section section4">
+      <picture>
+        <!-- Mobile image -->
+        <source media="(max-width: 1024px)" srcset="./assets/images/mikimoto/mikimoto-mobile-4.jpg" />
 
-    <!-- Section 4 -->
-    <section class="page-section" style="background-image: url('./assets/images/mikimoto/mikimoto-4.jpg');">
+        <!-- Desktop image -->
+        <img src="./assets/images/mikimoto/mikimoto-4.jpg" class="section-img" alt="" />
+      </picture>
     </section>
+    <section class="page-section section5">
+      <picture>
+        <!-- Mobile image -->
+        <source media="(max-width: 1024px)" srcset="./assets/images/mikimoto/mikimoto-mobile-5.jpg" />
 
-    <!-- Section 5 -->
-    <section class="page-section" style="background-image: url('./assets/images/mikimoto/mikimoto-5.jpg');">
+        <!-- Desktop image -->
+        <img src="./assets/images/mikimoto/mikimoto-5.jpg" class="section-img" alt="" />
+      </picture>
     </section>
-
-</body>
+  </body>
 </html>
