add sticky logo

--- a/index3.html
+++ b/index3.html
@@ -17,6 +17,8 @@
   </head>
 
   <body>
+<img src="./assets/images/mikimoto/logo_mikimoto.png" class="sticky-icon left" alt="Left Icon">
+<img src="./assets/images/mikimoto/logo_paragon.png" class="sticky-icon right" alt="Right Icon">
     <section class="page-section section1">
       <picture>
         <!-- Mobile image -->
