--- a/index3.html
+++ b/index3.html
@@ -17,51 +17,131 @@
   </head>
 
   <body>
-<img src="./assets/images/mikimoto/logo_mikimoto.png" class="sticky-icon left" alt="Left Icon">
-<img src="./assets/images/mikimoto/logo_paragon.png" class="sticky-icon right" alt="Right Icon">
+    <img
+      src="./assets/images/mikimoto/logo_mikimoto.png"
+      class="sticky-icon left"
+      alt="Left Icon"
+    />
+    <img
+      src="./assets/images/mikimoto/logo_paragon.png"
+      class="sticky-icon right"
+      alt="Right Icon"
+    />
     <section class="page-section section1">
       <picture>
         <!-- Mobile image -->
-        <source media="(max-width: 1024px)" srcset="./assets/images/mikimoto/mikimoto-mobile-1.jpg" />
+        <source
+          media="(max-width: 1024px)"
+          srcset="./assets/images/mikimoto/mikimoto-mobile-1.jpg"
+        />
 
         <!-- Desktop image -->
-        <img src="./assets/images/mikimoto/mikimoto-1.jpg" class="section-img" alt="" />
+        <img
+          src="./assets/images/mikimoto/mikimoto-1.jpg"
+          class="section-img"
+          alt=""
+        />
       </picture>
+      <a href="#next" class="section-btn">Make An Appointment</a>
     </section>
     <section class="page-section section2">
       <picture>
         <!-- Mobile image -->
-        <source media="(max-width: 1024px)" srcset="./assets/images/mikimoto/mikimoto-mobile-2.jpg" />
+        <source
+          media="(max-width: 1024px)"
+          srcset="./assets/images/mikimoto/mikimoto-mobile-2.jpg"
+        />
 
         <!-- Desktop image -->
-        <img src="./assets/images/mikimoto/mikimoto-2.jpg" class="section-img" alt="" />
+        <img
+          src="./assets/images/mikimoto/mikimoto-2.jpg"
+          class="section-img"
+          alt=""
+        />
       </picture>
+      <a href="#next" class="section-btn">Make An Appointment</a>
     </section>
     <section class="page-section section3">
       <picture>
         <!-- Mobile image -->
-        <source media="(max-width: 1024px)" srcset="./assets/images/mikimoto/mikimoto-mobile-3.jpg" />
+        <source
+          media="(max-width: 1024px)"
+          srcset="./assets/images/mikimoto/mikimoto-mobile-3.jpg"
+        />
 
         <!-- Desktop image -->
-        <img src="./assets/images/mikimoto/mikimoto-3.jpg" class="section-img" alt="" />
+        <img
+          src="./assets/images/mikimoto/mikimoto-3.jpg"
+          class="section-img"
+          alt=""
+        />
       </picture>
     </section>
     <section class="page-section section4">
       <picture>
         <!-- Mobile image -->
-        <source media="(max-width: 1024px)" srcset="./assets/images/mikimoto/mikimoto-mobile-4.jpg" />
+        <source
+          media="(max-width: 1024px)"
+          srcset="./assets/images/mikimoto/mikimoto-mobile-4.jpg"
+        />
 
         <!-- Desktop image -->
-        <img src="./assets/images/mikimoto/mikimoto-4.jpg" class="section-img" alt="" />
+        <img
+          src="./assets/images/mikimoto/mikimoto-4.jpg"
+          class="section-img"
+          alt=""
+        />
       </picture>
+      <a href="#next" class="section-btn">Make An Appointment</a>
     </section>
     <section class="page-section section5">
       <picture>
         <!-- Mobile image -->
-        <source media="(max-width: 1024px)" srcset="./assets/images/mikimoto/mikimoto-mobile-5.jpg" />
+        <source
+          media="(max-width: 1024px)"
+          srcset="./assets/images/mikimoto/mikimoto-mobile-5.jpg"
+        />
 
         <!-- Desktop image -->
-        <img src="./assets/images/mikimoto/mikimoto-5.jpg" class="section-img" alt="" />
+        <img
+          src="./assets/images/mikimoto/mikimoto-5.jpg"
+          class="section-img"
+          alt=""
+        />
+      </picture>
+      <a href="#next" class="section-btn">Make An Appointment</a>
+    </section>
+    <section class="page-section section6">
+      <picture>
+        <!-- Mobile image -->
+        <source
+          media="(max-width: 1024px)"
+          srcset="./assets/images/mikimoto/mikimoto-mobile-6.jpg"
+        />
+
+        <!-- Desktop image -->
+        <img
+          src="./assets/images/mikimoto/mikimoto-6.jpg"
+          class="section-img"
+          alt=""
+        />
+      </picture>
+      <a href="#next" class="section-btn">Make An Appointment</a>
+    </section>
+    <section class="page-section section7">
+      <picture>
+        <!-- Mobile image -->
+        <source
+          media="(max-width: 1024px)"
+          srcset="./assets/images/mikimoto/mikimoto-mobile-7.jpg"
+        />
+
+        <!-- Desktop image -->
+        <img
+          src="./assets/images/mikimoto/mikimoto-7.jpg"
+          class="section-img"
+          alt=""
+        />
       </picture>
     </section>
   </body>
