--- a/index3.html
+++ b/index3.html
@@ -83,7 +83,7 @@
           class="form-image"
           alt="Image"
         />
-        <h1 class="text-white mt-4 mb-3">Discovery Now</h1>
+        <h1 class="text-white mt-4 mb-3">Discover Now</h1>
         <form class="form-content">
           <div class="mb-3">
             <input
@@ -203,7 +203,7 @@
       </picture>
       <!-- Left-half div with form -->
       <div class="form-container left">
-        <h1 class="text-white mt-4 mb-3">Discovery Now</h1>
+        <h1 class="text-white mt-4 mb-3">Discover Now</h1>
         <form class="form-content">
           <div class="mb-3">
             <input
