--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <picture>
         <!-- Mobile image -->
         <source
-          media="(max-width: 1024px)"
+          media="(max-width: 1023px)"
           srcset="./assets/images/mikimoto/mikimoto-mobile-1.jpg"
         />
 
@@ -42,13 +42,13 @@
           alt=""
         />
       </picture>
-      <a href="#section3" class="section-btn">Make An Appointment</a>
+      <!-- <a href="#section3" class="section-btn">Make An Appointment</a> -->
     </section>
     <section class="page-section section2">
       <picture>
         <!-- Mobile image -->
         <source
-          media="(max-width: 1024px)"
+          media="(max-width: 1023px)"
           srcset="./assets/images/mikimoto/mikimoto-mobile-2.jpg"
         />
 
@@ -59,13 +59,13 @@
           alt=""
         />
       </picture>
-      <a href="#section3" class="section-btn">Make An Appointment</a>
+      <!-- <a href="#section3" class="section-btn">Make An Appointment</a> -->
     </section>
     <section id="section3" class="page-section section3">
       <picture>
         <!-- Mobile image -->
         <source
-          media="(max-width: 1024px)"
+          media="(max-width: 1023px)"
           srcset="./assets/images/mikimoto/mikimoto-mobile-3.jpg"
         />
 
@@ -125,7 +125,7 @@
       <picture>
         <!-- Mobile image -->
         <source
-          media="(max-width: 1024px)"
+          media="(max-width: 1023px)"
           srcset="./assets/images/mikimoto/mikimoto-mobile-4.jpg"
         />
 
@@ -150,13 +150,13 @@
           <button class="next">❯</button>
         </div>
       </div>
-      <a href="#section3" class="section-btn">Make An Appointment</a>
+      <!-- <a href="#section3" class="section-btn">Make An Appointment</a> -->
     </section>
     <section class="page-section section5">
       <picture>
         <!-- Mobile image -->
         <source
-          media="(max-width: 1024px)"
+          media="(max-width: 1023px)"
           srcset="./assets/images/mikimoto/mikimoto-mobile-5.jpg"
         />
 
@@ -167,13 +167,13 @@
           alt=""
         />
       </picture>
-      <a href="#section3" class="section-btn">Make An Appointment</a>
+      <!-- <a href="#section3" class="section-btn">Make An Appointment</a> -->
     </section>
     <section class="page-section section6">
       <picture>
         <!-- Mobile image -->
         <source
-          media="(max-width: 1024px)"
+          media="(max-width: 1023px)"
           srcset="./assets/images/mikimoto/mikimoto-mobile-6.jpg"
         />
 
@@ -184,13 +184,13 @@
           alt=""
         />
       </picture>
-      <a href="#section3" class="section-btn">Make An Appointment</a>
+      <!-- <a href="#section3" class="section-btn">Make An Appointment</a> -->
     </section>
     <section class="page-section section7">
       <picture>
         <!-- Mobile image -->
         <source
-          media="(max-width: 1024px)"
+          media="(max-width: 1023px)"
           srcset="./assets/images/mikimoto/mikimoto-mobile-7.jpg"
         />
 
