--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           alt=""
         />
       </picture>
-      <!-- <a href="#section3" class="section-btn">Make An Appointment</a> -->
+      <a href="#section3" class="section-btn"></a>
     </section>
     <section class="page-section section2">
       <picture>
@@ -59,7 +59,7 @@
           alt=""
         />
       </picture>
-      <!-- <a href="#section3" class="section-btn">Make An Appointment</a> -->
+      <a href="#section3" class="section-btn"></a>
     </section>
     <section id="section3" class="page-section section3">
       <picture>
@@ -148,7 +148,7 @@
           <button class="next">❯</button>
         </div>
       </div>
-      <!-- <a href="#section3" class="section-btn">Make An Appointment</a> -->
+      <a href="#section3" class="section-btn"></a>
     </section>
     <section class="page-section section5">
       <picture>
@@ -165,7 +165,7 @@
           alt=""
         />
       </picture>
-      <!-- <a href="#section3" class="section-btn">Make An Appointment</a> -->
+      <a href="#section3" class="section-btn"></a>
     </section>
     <section class="page-section section6">
       <picture>
@@ -182,7 +182,7 @@
           alt=""
         />
       </picture>
-      <!-- <a href="#section3" class="section-btn">Make An Appointment</a> -->
+      <a href="#section3" class="section-btn"></a>
     </section>
     <section class="page-section section7">
       <picture>
