--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </picture>
       <!-- <a href="#section3" class="section-btn">Make An Appointment</a> -->
     </section>
-    <section id="section3" class="page-section section3">
+    <section id="section3" class="page-section section3 ">
       <picture>
         <!-- Mobile image -->
         <source
@@ -83,8 +83,8 @@
           class="form-image"
           alt="Image"
         />
-        <form class="form-content">
-          <div class="mb-3">
+        <form class="form-content px-5">
+          <div class="mb-2">
             <input
               type="text"
               class="form-control"
@@ -92,7 +92,7 @@
               required
             />
           </div>
-          <div class="mb-3">
+          <div class="mb-2">
             <input
               type="tel"
               class="form-control"
@@ -116,7 +116,7 @@
           </div>
           <!-- CAPTCHA placeholder -->
           <div class="mb-3 text-white">[CAPTCHA]</div>
-          <button type="submit" class="btn-submit">Make An Appointment</button>
+          <button type="submit" class="transparent-btn"><img src="./assets/images/mikimoto/form-button.png" class="w-100" /></button>
         </form>
       </div>
     </section>
@@ -201,6 +201,12 @@
       </picture>
       <!-- Left-half div with form -->
       <div class="form-container left">
+
+        <img
+          src="./assets/images/mikimoto/mikimoto-7-text.png"
+          class="form-image"
+          alt="Image"
+        />
         <form class="form-content">
           <div class="mb-3">
             <input
