--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           class="form-image"
           alt="Image"
         />
-        <form class="form-content px-5">
+        <form class="form-content">
           <div class="mb-2">
             <input
               type="text"
@@ -201,14 +201,13 @@
       </picture>
       <!-- Left-half div with form -->
       <div class="form-container left">
-
-        <img
+       <img
           src="./assets/images/mikimoto/mikimoto-7-text.png"
           class="form-image"
           alt="Image"
         />
         <form class="form-content">
-          <div class="mb-3">
+          <div class="mb-2">
             <input
               type="text"
               class="form-control"
@@ -216,7 +215,7 @@
               required
             />
           </div>
-          <div class="mb-3">
+          <div class="mb-2">
             <input
               type="tel"
               class="form-control"
