--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         <!-- Mobile image -->
         <source
           media="(max-width: 1023px)"
-          srcset="./assets/images/mikimoto/mikimoto-mobile-7.jpg"
+          srcset="./assets/images/mikimoto/mikimoto-mobile-7-1.jpg"
         />
 
         <!-- Desktop image -->
@@ -199,6 +199,7 @@
           alt=""
         />
       </picture>
+     
       <!-- Left-half div with form -->
       <div class="form-container left">
 
@@ -243,6 +244,11 @@
           <button type="submit" class="btn-submit">Make An Appointment</button>
         </form>
       </div>
+       <img
+          src="./assets/images/mikimoto/mikimoto-mobile-7-2.jpg"
+          class="sec-7"
+          alt="Image"
+        />
     </section>
     <script>
       document.addEventListener("DOMContentLoaded", () => {
