--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
           </div>
           <!-- CAPTCHA placeholder -->
           <div class="mb-3 text-white">[CAPTCHA]</div>
-          <button type="submit" class="btn-submit">Make An Appointment</button>
+          <button type="submit" class="transparent-btn"><img src="./assets/images/mikimoto/form-button.png" class="w-100" /></button>
         </form>
       </div>
        <img
