--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
           media="(max-width: 1023px)"
           srcset="./assets/images/mikimoto/mikimoto-mobile-1.jpg"
         />
+        <source
+          media="(width: 1024px) and (orientation: portrait) and (hover: none) and (pointer: coarse)"
+          srcset="./assets/images/mikimoto/mikimoto-mobile-1.jpg"
+        />
+
 
         <!-- Desktop image -->
         <img
@@ -51,6 +56,10 @@
           media="(max-width: 1023px)"
           srcset="./assets/images/mikimoto/mikimoto-mobile-2.jpg"
         />
+         <source
+          media="(width: 1024px) and (orientation: portrait) and (hover: none) and (pointer: coarse)"
+          srcset="./assets/images/mikimoto/mikimoto-mobile-2.jpg"
+        />
 
         <!-- Desktop image -->
         <img
@@ -66,6 +75,10 @@
         <!-- Mobile image -->
         <source
           media="(max-width: 1023px)"
+          srcset="./assets/images/mikimoto/mikimoto-mobile-3.jpg"
+        />
+         <source
+          media="(width: 1024px) and (orientation: portrait) and (hover: none) and (pointer: coarse)"
           srcset="./assets/images/mikimoto/mikimoto-mobile-3.jpg"
         />
 
@@ -127,7 +140,10 @@
           media="(max-width: 1023px)"
           srcset="./assets/images/mikimoto/mikimoto-mobile-4N.jpg"
         />
-
+         <source
+          media="(width: 1024px) and (orientation: portrait) and (hover: none) and (pointer: coarse)"
+          srcset="./assets/images/mikimoto/mikimoto-mobile-4N.jpg"
+        />
         <!-- Desktop image -->
         <img
           src="./assets/images/mikimoto/mikimoto-4.jpg"
@@ -157,7 +173,10 @@
           media="(max-width: 1023px)"
           srcset="./assets/images/mikimoto/mikimoto-mobile-5.jpg"
         />
-
+         <source
+          media="(width: 1024px) and (orientation: portrait) and (hover: none) and (pointer: coarse)"
+          srcset="./assets/images/mikimoto/mikimoto-mobile-5.jpg"
+        />
         <!-- Desktop image -->
         <img
           src="./assets/images/mikimoto/mikimoto-5.jpg"
@@ -174,7 +193,10 @@
           media="(max-width: 1023px)"
           srcset="./assets/images/mikimoto/mikimoto-mobile-6.jpg"
         />
-
+         <source
+          media="(width: 1024px) and (orientation: portrait) and (hover: none) and (pointer: coarse)"
+          srcset="./assets/images/mikimoto/mikimoto-mobile-6.jpg"
+        />
         <!-- Desktop image -->
         <img
           src="./assets/images/mikimoto/mikimoto-6.jpg"
@@ -192,6 +214,10 @@
           srcset="./assets/images/mikimoto/mikimoto-mobile-7-1.jpg"
         />
 
+          <source
+          media="(width: 1024px) and (orientation: portrait) and (hover: none) and (pointer: coarse)"
+          srcset="./assets/images/mikimoto/mikimoto-mobile-7-1.jpg"
+        />
         <!-- Desktop image -->
         <img
           src="./assets/images/mikimoto/mikimoto-7.jpg"
