--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
           class="form-image"
           alt="Image"
         />
-        <form class="form-content">
+         <form class="form-content">
           <div class="mb-2">
             <input
               type="text"
@@ -232,9 +232,9 @@
               class="form-check-input"
               type="checkbox"
               value=""
-              id="termsCheck5"
+              id="termsCheck"
             />
-            <label class="form-check-label" for="termsCheck5">
+            <label class="form-check-label" for="termsCheck">
               Accept Customer Privacy
             </label>
           </div>
