[-] fix size and checkbox

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
             <input
               class="form-check-input"
               type="checkbox"
+              name="check1"
               value=""
               id="termsCheck"
             />
@@ -257,10 +258,11 @@
             <input
               class="form-check-input"
               type="checkbox"
+              name="check2"
               value=""
-              id="termsCheck"
+              id="termsCheck7"
             />
-            <label class="form-check-label" for="termsCheck">
+            <label class="form-check-label" for="termsCheck7">
               Accept Customer Privacy
             </label>
           </div>
