--- a/index.html
+++ b/index.html
@@ -230,13 +230,13 @@
 
       <!-- Left-half div with form -->
       <div class="form-container left">
+        <form class="form-content">
         <img
           src="./assets/images/mikimoto/mikimoto-7-text.png"
           class="form-image"
           alt="Image"
         />
-        <form class="form-content">
-          <div class="mb-2">
+          <div class="my-2">
             <input
               type="text"
               class="form-control"
