--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             />
           </div>
           <!-- Checkbox -->
-          <div class="form-check mb-3">
+          <div class="form-check mb-1 mb-lg-3">
             <input
               class="form-check-input"
               type="checkbox"
