--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <style></style>
 
-    <link rel="stylesheet" href="./assets/css/newstyle.css" />
+    <link rel="stylesheet" href="./assets/css/newstyle.css?v=3" />
   </head>
 
   <body>
