--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <style></style>
 
-    <link rel="stylesheet" href="./assets/css/newstyle.css?v=3" />
+    <link rel="stylesheet" href="./assets/css/newstyle.css?v=3.1" />
   </head>
 
   <body>
@@ -91,7 +91,12 @@
       <!-- Right half div with form -->
       <div class="form-container right">
         <img
-          src="./assets/images/mikimoto/mikimoto-3-text.png"
+          src="./assets/images/mikimoto/mikimoto-3-text1.png"
+          class="form-image"
+          alt="Image"
+        />
+        <img
+          src="./assets/images/mikimoto/mikimoto-3-text2.png"
           class="form-image"
           alt="Image"
         />
