--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         <!-- Mobile image -->
         <source
           media="(max-width: 1023px)"
-          srcset="./assets/images/mikimoto/mikimoto-mobile-7-1.jpg"
+          srcset="./assets/images/mikimoto/mikimoto-mobile-7.jpg"
         />
 
         <source
@@ -279,11 +279,11 @@
           </button>
         </form>
       </div>
-      <img
+      <!-- <img
         src="./assets/images/mikimoto/mikimoto-mobile-7-2.jpg"
         class="sec-7"
         alt="Image"
-      />
+      /> -->
     </section>
     <script>
       document.addEventListener("DOMContentLoaded", () => {
